# agentic-customer-support-OLAP

./: README.md  pyproject.toml
agentic_customer_support_olap.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
configs/agents/: customer_market.yaml  pricing_revenue.yaml  shipping_logistics.yaml  supervisor_tpch.yaml  supplier_part.yaml
olap_agent/: __init__.py  base_agent.py  supervisor.py  tools.py
scripts/: mysql_tpch_schema.sql  seed_tpch_data.py
tests/: test_query.py  tpch_benchmark.py
